got all styles working now

--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
   <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>quick-livereload</title>
   <link rel="stylesheet" href="style/style.css" type="text/css">
-  <!-- <style>
-  @import url(./style/style2.css);
-  body {
-    margin: 0;
-    background: green;
-    border: 10px solid blue;
-  }
-  </style> -->
+  <style>
+  @import url(./style/c/style4.css);
+  </style>
 </head>
 <body>
   <script src="bundle.js"></script>
